fix(src): :bug: html body overflow and position

--- a/public/custom.css
+++ b/public/custom.css
@@ -28,6 +28,12 @@ nav {
   background-color: var(--card-background-color);
 }
 
+html,
+body {
+  overflow: hidden;
+  position: fixed;
+}
+
 div.scroll {
   overflow-y: scroll;
   height: 100vh;
